--- a/wp-bib.bib
+++ b/wp-bib.bib
@@ -150,5 +150,80 @@ doi = {10.1080/2153599X.2022.2065349}
   publisher={Oxford University Press}
 }
 
+@article{lubke2020we,
+  title={Why we should teach causal inference: Examples in linear regression with simulated data},
+  author={L{\"u}bke, Karsten and Gehrke, Matthias and Horst, J{\"o}rg and Szepannek, Gero},
+  journal={Journal of Statistics Education},
+  volume={28},
+  number={2},
+  pages={133--139},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
 
+@article{snowden2011implementation,
+  title={Implementation of G-computation on a simulated data set: demonstration of a causal inference technique},
+  author={Snowden, Jonathan M and Rose, Sherri and Mortimer, Kathleen M},
+  journal={American journal of epidemiology},
+  volume={173},
+  number={7},
+  pages={731--738},
+  year={2011},
+  publisher={Oxford University Press}
+}
+
+@article{robins1986new,
+  title={A new approach to causal inference in mortality studies with a sustained exposure period—application to control of the healthy worker survivor effect},
+  author={Robins, James M},
+  journal={Mathematical modelling},
+  volume={7},
+  number={9-12},
+  pages={1393--1512},
+  year={1986},
+  publisher={Elsevier}
+}
+
+@article{ahern2009estimating,
+  title={Estimating the effects of potential public health interventions on population disease burden: a step-by-step illustration of causal inference methods},
+  author={Ahern, Jennifer and Hubbard, Alan and Galea, Sandro},
+  journal={American journal of epidemiology},
+  volume={169},
+  number={9},
+  pages={1140--1147},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
+@article{vansteelandt2011invited,
+  title={Invited commentary: G-computation--lost in translation?},
+  author={Vansteelandt, Stijn and Keiding, Niels},
+  journal={American journal of epidemiology},
+  volume={173},
+  number={7},
+  pages={739--742},
+  year={2011},
+  publisher={Oxford University Press}
+}
+
+@article{wysocki2022statistical,
+  title={Statistical control requires causal justification},
+  author={Wysocki, Anna C and Lawson, Katherine M and Rhemtulla, Mijke},
+  journal={Advances in Methods and Practices in Psychological Science},
+  volume={5},
+  number={2},
+  pages={25152459221095823},
+  year={2022},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{rohrer2018thinking,
+  title={Thinking clearly about correlations and causation: Graphical causal models for observational data},
+  author={Rohrer, Julia M},
+  journal={Advances in methods and practices in psychological science},
+  volume={1},
+  number={1},
+  pages={27--42},
+  year={2018},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
 
