--- a/wp-bib.bib
+++ b/wp-bib.bib
@@ -227,3 +227,16 @@ doi = {10.1080/2153599X.2022.2065349}
   publisher={Sage Publications Sage CA: Los Angeles, CA}
 }
 
+@article{wang2015g,
+  title={G-computation demonstration in causal mediation analysis},
+  author={Wang, Aolin and Arah, Onyebuchi A},
+  journal={European journal of epidemiology},
+  volume={30},
+  pages={1119--1127},
+  year={2015},
+  publisher={Springer}
+}
+
+
+
+
